--- a/template_bootstrap.html
+++ b/template_bootstrap.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <h1 class="theme-colors">test</h1>
+    <h1 class="theme-colors text-center">test</h1>
     <main class="p-3">
       <!-- 4個分のタブ -->
       <ul class="nav nav-tabs">
