--- a/テーマ/sublime/index.html
+++ b/テーマ/sublime/index.html
@@ -39,7 +39,7 @@
 
       <div class="caption light animated wow fadeInDown clearfix">
         <h1>Mayo Nakamura</h1>
-        <p>dolore magna aliqua enim ad minim veniam occaecat</p>
+        <p>portfolio</p>
         <hr />
       </div>
       <div class="shadow"></div>
@@ -229,8 +229,7 @@
         <div class="rights">
           <img src="img/footer_logo.png" alt="" class="footer_logo" />
           <p>
-            © Sublime. All Rights Reserved 2014 - More Free Templates at
-            <a href="http://pixelhint.com" target="_blank">Pixelhint.com</a>
+            © MayoNakamura. All Rights Reserved 2020
           </p>
         </div>
 
@@ -239,7 +238,7 @@
             <li><a href="#">About</a></li>
             <li><a href="#">FAQ</a></li>
             <li><a href="#">Services</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="#">Twitter</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
