--- a/template.html
+++ b/template.html
@@ -15,7 +15,7 @@
 
     <!-- Google fonts(日本語）の読みこみ -->
   <link
-    href="https://fonts.googleapis.com/css?family=Arapey|Mansalva|Nothing+You+Could+Do|Noto+Serif+JP|Montserrat|hannari|Sawarabi+Mincho|kokoro|Sawarabi Gothic|Shadows+Into+Light|Ubuntu&display=swap"
+    href="https://fonts.googleapis.com/css?family=Arapey|Mansalva|Francois+One|Nothing+You+Could+Do|Darker+Grotesque|Noto+Serif+JP|Montserrat|hannari|Sawarabi+Mincho|kokoro|Sawarabi Gothic|Shadows+Into+Light|Ubuntu&display=swap"
     rel="stylesheet">
     <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
 
@@ -26,7 +26,6 @@
 <link rel="stylesheet" href="css/style.css">
 
 
- 
   <title>Templates</title>
   </head>
   <body>
@@ -41,6 +40,8 @@
     <p style="font-family: 'Arapey', serif;">hacker's bar</p>
     <p style="font-family: 'Ubuntu', sans-serif;">hacker's bar</p>
     <p style="font-family: 'Montserrat', sans-serif;">hacker's bar</p>
+    <p style="font-family: 'Francois One', sans-serif;">hacker's bar</p>
+    <p style="font-family: 'Darker Grotesque', sans-serif;letter-spacing: 2px;">hacker's bar</p>
 
     <!-- 日本語 -->
     <p style="font-family: 'Noto Serif JP',serif;">こだわり：Noto serif</p>
@@ -48,7 +49,7 @@
     <p style="font-family: 'kokoro';">こだわり：こころkokoro</p>
     <p style="font-family: 'Sawarabi Mincho';">こだわり:さわらび明朝体</p>
     <p style="font-family: 'Sawarabi Gothic';">こだわり：さわらびゴシック</p>
-    <p style="font-family: 'helvetica neue', YuGothic, 'ヒラギノ角ゴ pron w3', 'Hiragino Kaku Gothic ProN, Arial, メイリオ, Meiryo, sans-serif;">侍ブログフォントです！：こだわり</p>
+    <p style="font-family: 'helvetica neue', YuGothic, 'ヒラギノ角ゴ pron w3', 'Hiragino Kaku Gothic ProN, Arial, メイリオ, Meiryo, sans-serif;">侍ブログフォント(Yugothic)です！：こだわり</p>
 
     <style>
       h1 {
@@ -78,9 +79,9 @@
     <!-- ボタンを押すとコメントが出たり隠れたりする -->
     <h1>ボタンを押すとコメントが出たり隠れたりする</h1>
     <input
-      type="button"
-      value="コンテンツが出たり隠れたりします"
-      id="contentsbtn"
+    type="button"
+    value="コンテンツが出たり隠れたりします"
+    id="contentsbtn"
     />
     <p id="contents" class="off">コンテンツです</p>
 
@@ -136,23 +137,23 @@
     <h1>ラジオボックスの表示をボタンにする</h1>
     <form>
       <input type="radio" name="pref" value="tokyo" id="東京" /><label
-        for="東京"
-        class="label"
-        >東京</label
+      for="東京"
+      class="label"
+      >東京</label
       >
       <input type="radio" name="pref" value="神奈川" id="神奈川" /><label
-        for="神奈川"
-        class="label"
-        >神奈川</label
+      for="神奈川"
+      class="label"
+      >神奈川</label
       >
       <input type="radio" name="pref" value="埼玉" id="埼玉" /><label
-        for="埼玉"
-        class="label"
+      for="埼玉"
+      class="label"
         >埼玉</label
-      >
-    </form>
+        >
+      </form>
 
-    <style>
+      <style>
       input[type="radio"] {
       display: none;
       }
@@ -608,6 +609,42 @@ h1{
     }
 
   </style>
+
+<script>
+/* map関数 */
+  let numbers = [1,2,3,4];
+  let newN = numbers.map(function(number){
+  return number + 1;
+  })
+  console.log(newN);
+
+/* filter関数 */
+  let numbers2 = [1, 2, 3, 4];
+  let newN2 = numbers2.filter(function (number2) {
+    return number2 % 2 === 0
+  })
+  console.log(newN2);
+
+/* 乱数 */
+/* 2-5までの乱数 */
+let ransu = Math.floor(Math.random() * 4) +2;
+console.log(ransu);
+
+/* setinterval */
+
+let i =0;
+function showTime(){
+  let d = new Date();
+  console.log(d.getSeconds());
+  i++;
+  if(i>2){
+    clearInterval(intervalId);
+  }
+  }
+  intervalId = setInterval(showTime,1000);
+
+
+</script>
 
 </body>
 
