--- a/template_bootstrap_2.html
+++ b/template_bootstrap_2.html
@@ -23,17 +23,33 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-2 col-md-4 col-xs-6">block1</div>
-      <div class="col-lg-2 col-md-4 col-xs-6">block1</div>
-      <div class="col-lg-2 col-md-4 col-xs-6">block1</div>
-      <div class="col-lg-2 col-md-4 col-xs-6">block1</div>
-      <div class="col-lg-2 col-md-4 col-xs-6">block1</div>
-      <div class="col-lg-2 col-md-4 col-xs-6">block1</div>
+      <div class="col-lg-2 col-md-4 col-xs-6 block">block1</div>
+      <div class="col-lg-2 col-md-4 col-xs-6 block">block1</div>
+      <div class="col-lg-2 col-md-4 col-xs-6 block">block1</div>
+      <div class="col-lg-2 col-md-4 col-xs-6 block">block1</div>
+      <div class="col-lg-2 col-md-4 col-xs-6 block">block1</div>
+      <div class="col-lg-2 col-md-4 col-xs-6 block">block1</div>
+    </div>
+    <div class="row">
+      <div class="col-md-3 order-md-1 bg-dark text-white">block1</div>
+      <div class="col-md-9 order-md-2 bg-primary text-white text-center">
+        block1
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-3 order-md-2 bg-dark text-white">block1</div>
+      <div class="col-md-9 order-md-1 bg-primary text-white">block1</div>
     </div>
     <style>
       .jumbotron {
         background: url("img/cat.jpg") no-repeat center;
         background-size: cover;
+      }
+
+      .block {
+        box-sizing: border-box;
+        border: 1px dotted black;
+        padding: 10px;
       }
     </style>
   </body>
