--- a/template.html
+++ b/template.html
@@ -7,8 +7,8 @@
     <!-- Jqueryの読み込み -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <!-- font awesomeの読み込み -->
-<script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js"></script>
-    <!-- Google fonts(英字）の読みこみ -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css"
+  integrity="sha384-v8BU367qNbs/aIZIxuivaU55N5GPF89WBerHoGA4QTcbUjYiLQtKdrfXnqAcXyTv" crossorigin="anonymous" />    <!-- Google fonts(英字）の読みこみ -->
   <link
     href="https://fonts.googleapis.com/css?family=Arapey|Mansalva|Nothing+You+Could+Do|Noto+Serif+JP|Shadows+Into+Light|Ubuntu&display=swap"
     rel="stylesheet">
@@ -620,8 +620,8 @@ h1{
 
 /* filter関数 */
   let numbers2 = [1, 2, 3, 4];
-  let newN2 = numbers2.filter(function (number2) {
-    return number2 % 2 === 0
+  let newN2 = numbers2.filter(function (num) {
+    return num % 2 === 0
   })
   console.log(newN2);
 
@@ -631,7 +631,6 @@ let ransu = Math.floor(Math.random() * 4) +2;
 console.log(ransu);
 
 /* setinterval */
-
 let i =0;
 function showTime(){
   let d = new Date();
@@ -642,6 +641,16 @@ function showTime(){
   }
   }
   intervalId = setInterval(showTime,1000);
+
+  /* splice */
+  let arrayt = ["b", "c"];
+  arrayt.splice(0, 1, "d");
+  console.log(arrayt);
+
+  /* slice */
+  let arrayy = ["b", "c"];
+    arrayy.slice(0, 1);
+    console.log(arrayy.slice(0, 1));
 
 
 </script>
